[gd_scene load_steps=9 format=3 uid="uid://dsyi0ewb6pf0q"]

[ext_resource type="Texture2D" uid="uid://b64tsxfcpyfkj" path="res://assets/img/icon.svg" id="1_hvmm2"]
[ext_resource type="Script" uid="uid://ejjab50ukpye" path="res://scripts/dialogue.gd" id="1_p0wdv"]
[ext_resource type="Texture2D" uid="uid://bh2k6trfvr5xg" path="res://assets/img/dialogue_box.png" id="1_rc1id"]
[ext_resource type="SystemFont" uid="uid://c01dtsgxpnrad" path="res://assets/fonts/dialogue_box_italicized.tres" id="2_fu8b5"]
[ext_resource type="SystemFont" uid="uid://dy4i8g3aql6l7" path="res://assets/fonts/dialogue_box_normal.tres" id="2_tm68y"]

[sub_resource type="Animation" id="Animation_vogiq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_led2e"]
resource_name = "indicator"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.85, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x1cjp"]
_data = {
&"RESET": SubResource("Animation_vogiq"),
&"indicator": SubResource("Animation_led2e")
}

[node name="Dialogue" type="Control"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_p0wdv")

[node name="SpeakerTexture" type="TextureRect" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -380.0
offset_right = 290.0
grow_vertical = 0
texture = ExtResource("1_hvmm2")

[node name="DialogueBox" type="MarginContainer" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -57.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 32

[node name="Background" type="NinePatchRect" parent="DialogueBox"]
custom_minimum_size = Vector2(0, 115)
layout_mode = 2
texture = ExtResource("1_rc1id")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="InnerMargins" type="MarginContainer" parent="DialogueBox/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="DialogueBox/Background/InnerMargins"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpeakerNameLabel" type="RichTextLabel" parent="DialogueBox/Background/InnerMargins/VBoxContainer"]
z_index = 1
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_tm68y")
theme_override_fonts/italics_font = ExtResource("2_fu8b5")
theme_override_font_sizes/normal_font_size = 17
theme_override_font_sizes/italics_font_size = 17
bbcode_enabled = true
text = "[color=#a46895]John Doe[/color]"
fit_content = true

[node name="DialogueTextLabel" type="RichTextLabel" parent="DialogueBox/Background/InnerMargins/VBoxContainer"]
z_index = 2
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("2_tm68y")
theme_override_fonts/italics_font = ExtResource("2_fu8b5")
theme_override_font_sizes/normal_font_size = 17
theme_override_font_sizes/italics_font_size = 17
bbcode_enabled = true
text = "[i]Lorem[/i] ipsum dolor sit amet"
fit_content = true
visible_characters = 0
visible_ratio = 0.0

[node name="AutoPlayTimer" type="Timer" parent="DialogueBox/Background/InnerMargins/VBoxContainer/DialogueTextLabel"]
wait_time = 7.5
one_shot = true

[node name="EndOfDialogueLabel" type="RichTextLabel" parent="DialogueBox/Background/InnerMargins/VBoxContainer"]
z_index = 2
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_tm68y")
theme_override_fonts/italics_font = ExtResource("2_fu8b5")
theme_override_font_sizes/normal_font_size = 17
theme_override_font_sizes/italics_font_size = 17
bbcode_enabled = true
text = "..."
fit_content = true
horizontal_alignment = 2
vertical_alignment = 2
visible_characters = 0
visible_ratio = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogueBox/Background/InnerMargins/VBoxContainer/EndOfDialogueLabel"]
libraries = {
&"": SubResource("AnimationLibrary_x1cjp")
}
